# EventManager

./: .gitignore  README.md
Source/: CMakeLists.txt  Event.cpp  Event.hpp  EventManager.cpp  EventManager.hpp  command.txt  main.cpp
Source/CppDelegates/: Delegate.h  DelegateBase.h
